Changes by thyraofverstrom